add upload future

--- a/apply-step3.html
+++ b/apply-step3.html
@@ -506,42 +506,49 @@
                                             <ul class="uk-flex uk-flex-middle uk-child-width-1-5 wrapper_check">
                                                 <li class="check_style1">
                                                     <label class="en_word">
-                                                        <input class="uk-radio" type="radio" name="type_business" data-target-input="#s13" data-action-input="hidden">
+                                                        <input class="uk-radio" type="radio" name="type_business"
+                                                               data-target-input="#s13" data-action-input="hidden">
                                                         B2B
                                                     </label>
                                                 </li>
                                                 <li class="check_style1">
                                                     <label class="en_word">
-                                                        <input class="uk-radio" type="radio" name="type_business" data-target-input="#s13" data-action-input="hidden">
+                                                        <input class="uk-radio" type="radio" name="type_business"
+                                                               data-target-input="#s13" data-action-input="hidden">
                                                         B2B2C
                                                     </label>
                                                 </li>
                                                 <li class="check_style1">
                                                     <label class="en_word">
-                                                        <input class="uk-radio" type="radio" name="type_business" data-target-input="#s13" data-action-input="hidden">
+                                                        <input class="uk-radio" type="radio" name="type_business"
+                                                               data-target-input="#s13" data-action-input="hidden">
                                                         B2C
                                                     </label>
                                                 </li>
                                                 <li class="check_style1">
                                                     <label class="en_word">
-                                                        <input class="uk-radio" type="radio" name="type_business" data-target-input="#s13" data-action-input="hidden">
+                                                        <input class="uk-radio" type="radio" name="type_business"
+                                                               data-target-input="#s13" data-action-input="hidden">
                                                         C2C
                                                     </label>
                                                 </li>
                                                 <li class="check_style1">
                                                     <label class="en_word">
-                                                        <input class="uk-radio" type="radio" name="type_business" data-target-input="#s13" data-action-input="hidden">
+                                                        <input class="uk-radio" type="radio" name="type_business"
+                                                               data-target-input="#s13" data-action-input="hidden">
                                                         C2G
                                                     </label>
                                                 </li>
                                                 <li class="check_style1">
                                                     <label>
-                                                        <input class="uk-radio" type="radio" name="type_business" data-target-input="#s13" data-action-input="show">
+                                                        <input class="uk-radio" type="radio" name="type_business"
+                                                               data-target-input="#s13" data-action-input="show">
                                                         دیگر
                                                     </label>
                                                 </li>
                                             </ul>
-                                            <input type="text" id="s13" placeholder="نوع کسب و کار خود را بنویسید ..." autocomplete="off" style="display: none"/>
+                                            <input type="text" id="s13" placeholder="نوع کسب و کار خود را بنویسید ..."
+                                                   autocomplete="off" style="display: none"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label req">كدام يك از موارد زير در استارتاپ شما وجود دارد
@@ -624,7 +631,8 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            <input type="text" placeholder="لینک آن را وارد نمایید " id="s3" autocomplete="off" style="display: none"/>
+                                            <input type="text" placeholder="لینک آن را وارد نمایید " id="s3"
+                                                   autocomplete="off" style="display: none"/>
                                         </li>
                                         <!--<li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label req" for="s4">توضیح دهید که چرا این ایده را انتخاب
@@ -701,6 +709,41 @@
                                                 اگر توضیح بیشتری وجود دارد که لازم است ما بدانیم در زیر بنویسید.
                                             </label>
                                             <textarea id="s9" data-autosize></textarea>
+                                        </li>
+                                        <li class="fs1_item uk-width-1-1">
+                                            <label class="fs1_label">
+                                                آپلود فایل های ضمیمه
+                                            </label>
+                                            <div class="uk-flex uk-flex-around">
+                                                <div class="js-upload" data-uk-form-custom>
+                                                    <input type="file" multiple>
+                                                    <button class="uk-button uk-button-default" type="button"
+                                                            tabindex="-1">
+                                                        <span class="en">business model</span>
+                                                    </button>
+                                                </div>
+                                                <div class="js-upload" data-uk-form-custom>
+                                                    <input type="file" multiple>
+                                                    <button class="uk-button uk-button-default" type="button"
+                                                            tabindex="-1">
+                                                        <span class="en">business plane</span>
+                                                    </button>
+                                                </div>
+                                                <div class="js-upload" data-uk-form-custom>
+                                                    <input type="file" multiple>
+                                                    <button class="uk-button uk-button-default" type="button"
+                                                            tabindex="-1">
+                                                        <span class="en">finance model</span>
+                                                    </button>
+                                                </div>
+                                                <div class="js-upload" data-uk-form-custom>
+                                                    <input type="file" multiple>
+                                                    <button class="uk-button uk-button-default" type="button"
+                                                            tabindex="-1">
+                                                        <span class="en">peachtech</span>
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
