--- a/static/apply.html
+++ b/static/apply.html
@@ -42,22 +42,22 @@
                             </li>
                         </ul>
                     </div>
-                    <form>
+                    <form data-valid-form>
                         <div class="form_group_style1">
                             <div class="fg1_inner">
                                 <div class="form_style1">
                                     <ul data-uk-grid>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p0">نام </label>
-                                            <input type="text" id="p0" autocomplete="off"/>
+                                            <label class="fs1_label" for="p-name">نام </label>
+                                            <input type="text" id="p-name"  autocomplete="off" data-valid-required/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p00">نام خانوادگی</label>
-                                            <input type="text" id="p00" autocomplete="off"/>
+                                            <label class="fs1_label" for="p-family">نام خانوادگی</label>
+                                            <input type="text" id="p-family" autocomplete="off" data-valid-required/>
                                         </li>
                                         <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label" for="p9">مقطع تحصیلی</label>
-                                            <select name="" id="p9">
+                                            <label class="fs1_label" for="p_grade">مقطع تحصیلی</label>
+                                            <select name="" id="p_grade" data-valid-required>
                                                 <option disabled selected>-- انتخاب نمایید --</option>
                                                 <option value="0">دیپلم</option>
                                                 <option value="1">کارشناسی</option>
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                         <div class="uk-margin-medium uk-margin-remove-bottom uk-flex uk-flex-row-reverse">
-                            <a href="apply-step2.html" class="btn_style1 bg_purple">تائید و ادامه</a>
+                            <button type="submit" class="btn_style1 bg_purple">تائید و ادامه</button>
                         </div>
                     </form>
                 </div>
@@ -204,6 +204,9 @@
 <script src="_js/jquery-3.3.1.min.js"></script>
 <script src="_framework/uikit-3.0.0/js/uikit.min.js"></script>
 <script src="_js/pages/apply.js"></script>
+<script src="_js/plugin/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="_js/plugin/jquery-validation/dist/additional-methods.min.js"></script>
+<script src="_js/plugin/jquery-validation/validate.js"></script>
 
 </body>
 </html>
