--- a/static/apply-step3.html
+++ b/static/apply-step3.html
@@ -5,6 +5,19 @@
     <title>فرم ثبت نام</title>
     <link rel="stylesheet" href="_framework/uikit-3.0.0/css/uikit-rtl.min.css">
     <link rel="stylesheet" href="_css/master.css">
+    <style>
+        .file-label{
+            font-size: 0.8rem;
+            text-align: center;
+        }
+        .file-label .icon{
+            background: transparent url("images/icon/upload.svg") no-repeat right / contain;
+            display: block;
+            width: 20px;
+            height: 20px;
+            margin: 0 3px;
+        }
+    </style>
 </head>
 <body>
 <!--========Header==========-->
@@ -715,33 +728,21 @@
                                                 آپلود فایل های ضمیمه
                                             </label>
                                             <div class="uk-flex uk-flex-around">
-                                                <div class="js-upload" data-uk-form-custom>
-                                                    <input type="file" multiple>
-                                                    <button class="uk-button uk-button-default" type="button"
-                                                            tabindex="-1">
-                                                        <span class="en">business model</span>
-                                                    </button>
+                                                <div class="js-upload uk-width-1-1 uk-width-1-4@l uk-margin-small-left">
+                                                    <div class="file-label uk-flex uk-flex-middle uk-flex-center uk-margin-small-bottom"><i class="icon"></i><h4 class="text uk-margin-remove">آپلود فایل شماره یک</h4></div>
+                                                    <input type="file" data-max-files="1">
                                                 </div>
-                                                <div class="js-upload" data-uk-form-custom>
-                                                    <input type="file" multiple>
-                                                    <button class="uk-button uk-button-default" type="button"
-                                                            tabindex="-1">
-                                                        <span class="en">business plane</span>
-                                                    </button>
+                                                <div class="js-upload uk-width-1-1 uk-width-1-4@l uk-margin-small-left">
+                                                    <div class="file-label uk-flex uk-flex-middle uk-flex-center uk-margin-small-bottom"><i class="icon"></i><h4 class="text uk-margin-remove">آپلود فایل شماره دوم</h4></div>
+                                                    <input type="file" data-max-files="1">
                                                 </div>
-                                                <div class="js-upload" data-uk-form-custom>
-                                                    <input type="file" multiple>
-                                                    <button class="uk-button uk-button-default" type="button"
-                                                            tabindex="-1">
-                                                        <span class="en">finance model</span>
-                                                    </button>
+                                                <div class="js-upload uk-width-1-1 uk-width-1-4@l uk-margin-small-left">
+                                                    <div class="file-label uk-flex uk-flex-middle uk-flex-center uk-margin-small-bottom"><i class="icon"></i><h4 class="text uk-margin-remove">آپلود فایل شماره سوم</h4></div>
+                                                    <input type="file" data-max-files="1">
                                                 </div>
-                                                <div class="js-upload" data-uk-form-custom>
-                                                    <input type="file" multiple>
-                                                    <button class="uk-button uk-button-default" type="button"
-                                                            tabindex="-1">
-                                                        <span class="en">peachtech</span>
-                                                    </button>
+                                                <div class="js-upload uk-width-1-1 uk-width-1-4@l">
+                                                    <div class="file-label uk-flex uk-flex-middle uk-flex-center uk-margin-small-bottom"><i class="icon"></i><h4 class="text uk-margin-remove">آپلود فایل شماره چهارم</h4></div>
+                                                    <input type="file" data-max-files="1">
                                                 </div>
                                             </div>
                                         </li>
@@ -791,6 +792,20 @@
 <script src="_plugin/persian_datepicker/daterangepicker-fa-ex.js"></script>
 <link rel="stylesheet" href="_plugin/persian_datepicker/daterangepicker.css">
 <link rel="stylesheet" href="_plugin/persian_datepicker/date_rangepicker_persian.css">
-
+<link rel="stylesheet" href="_plugin/filepond-master/dist/filepond.min.css">
+<script type="text/javascript" src="_plugin/filepond-master/dist/filepond.min.js"></script>
+<script>
+    const inputElement = $('input[type="file"]');
+    inputElement.map(function (index,elem) {
+        let pond = FilePond.create(elem);
+        pond.setOptions({
+            labelIdle : 'فایل خود را بکشید و یا <span class="filepond--label-action"> انتخاب کنید </span>',
+            labelButtonRemoveItem: 'پاک کنید',
+            labelFileLoading : 'در حال بارگذاری',
+            labelFileProcessing : 'در حال آپلود',
+            labelFileProcessingComplete : 'آپلود کامل شد'
+        });
+    });
+</script>
 </body>
 </html>
