working on validate

--- a/static/apply-step2.html
+++ b/static/apply-step2.html
@@ -42,7 +42,7 @@
                             </li>
                         </ul>
                     </div>
-                    <form data-valid->
+                    <form data-valid-form>
                         <div class="form_group_style1">
                             <div class="fg1_inner">
                                 <div class="form_style1">
@@ -68,7 +68,7 @@
                                                         از
                                                         تیم ؟
                                                     </label>
-                                                    <textarea id="t11" data-autosize></textarea>
+                                                    <textarea name="" id="t11" data-autosize data-valid-required></textarea>
                                                 </div>
                                                 <div>
                                                     <label class="fs1_label" for="t12">تعداد افراد شاغل در استارتاپ</label>
@@ -80,7 +80,7 @@
                                                         برای
                                                         نقش خود را توضیح دهید ؟
                                                     </label>
-                                                    <textarea id="t13" data-autosize></textarea>
+                                                    <textarea id="t13" data-autosize data-valid-required></textarea>
                                                 </div>
                                             </div>
                                         </li>
@@ -92,7 +92,7 @@
                                                     هریک از اعضا - نوع فعالیت - توضیح كوتاهی از دلیل آن)
                                                 </small>
                                             </label>
-                                            <textarea id="t14" data-autosize></textarea>
+                                            <textarea id="t14" data-autosize data-valid-required></textarea>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label" for="t15">
@@ -101,7 +101,7 @@
                                                     (ویژگی بارز و یا تفاوت عمده شما با تیم هاي دیگر)
                                                 </small>
                                             </label>
-                                            <textarea id="t15" data-autosize></textarea>
+                                            <textarea id="t15" data-autosize data-valid-required></textarea>
                                         </li>
                                     </ul>
                                 </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="uk-margin-medium uk-margin-remove-bottom uk-flex uk-flex-between">
                             <a href="apply.html" class="btn_style1 bg_gray">بازگشت</a>
-                            <a href="apply-step3.html" class="btn_style1 bg_purple">تائید و ادامه</a>
+                            <button type="submit" class="btn_style1 bg_purple">تائید و ادامه</button>
                         </div>
                     </form>
                 </div>
