working on validate

--- a/static/apply-step2.html
+++ b/static/apply-step2.html
@@ -62,46 +62,46 @@
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
                                             <div data-uk-grid class="uk-child-width-1-1">
-                                                <div>
-                                                    <label class="fs1_label" for="t11">
+                                                <div class="uk-position-relative">
+                                                    <label class="fs1_label" for="background">
                                                         سابقه فعالیت تیمی به غیر از استارتاپ فعلی ومدت زمان شناخت موسس
                                                         از
                                                         تیم ؟
                                                     </label>
-                                                    <textarea name="" id="t11" data-autosize data-valid-required></textarea>
+                                                    <textarea name="background" id="background" data-autosize data-valid-required></textarea>
                                                 </div>
-                                                <div>
-                                                    <label class="fs1_label" for="t12">تعداد افراد شاغل در استارتاپ</label>
-                                                    <input type="text" id="t12" autocomplete="off"/>
+                                                <div class="uk-position-relative">
+                                                    <label class="fs1_label" for="employees_count">تعداد افراد شاغل در استارتاپ</label>
+                                                    <input name="employees_count" type="text" id="employees_count" autocomplete="off" data-valid-required/>
                                                 </div>
-                                                <div>
-                                                    <label class="fs1_label" for="t13">
+                                                <div class="uk-position-relative">
+                                                    <label class="fs1_label" for="introduction">
                                                         نقش و شرح فعالیت هریك از اعضای تیم چیست و دلیل صلاحیت این فرد
                                                         برای
                                                         نقش خود را توضیح دهید ؟
                                                     </label>
-                                                    <textarea id="t13" data-autosize data-valid-required></textarea>
+                                                    <textarea name="introduction" id="introduction" data-autosize data-valid-required></textarea>
                                                 </div>
                                             </div>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
-                                            <label class="fs1_label" for="t14">
-                                                نحوه فعالیت اعضای تیم شما چطونه است ؟
+                                            <label class="fs1_label" for="teamwork">
+                                                نحوه فعالیت اعضای تیم شما چگونه است ؟
                                                 <small style="font-size: 75%">( تمام وقت / پاره وقت / از راه دور و...
                                                     نام
                                                     هریک از اعضا - نوع فعالیت - توضیح كوتاهی از دلیل آن)
                                                 </small>
                                             </label>
-                                            <textarea id="t14" data-autosize data-valid-required></textarea>
+                                            <textarea name="teamwork" id="teamwork" data-autosize data-valid-required></textarea>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
-                                            <label class="fs1_label" for="t15">
+                                            <label class="fs1_label" for="description">
                                                 تیم خود را چگونه توصیف میکنید؟
                                                 <small>
                                                     (ویژگی بارز و یا تفاوت عمده شما با تیم هاي دیگر)
                                                 </small>
                                             </label>
-                                            <textarea id="t15" data-autosize data-valid-required></textarea>
+                                            <textarea name="description" id="description" data-autosize data-valid-required></textarea>
                                         </li>
                                     </ul>
                                 </div>
