--- a/static/apply.html
+++ b/static/apply.html
@@ -111,7 +111,8 @@
                                                                name="gender"
                                                                id="has_male"
                                                                data-valid-depend="#soldiership_status"
-                                                               data-target-input="#soldiership_holder" data-action-input="show"/>
+                                                               data-target-input="#soldiership_holder"
+                                                               data-action-input="show"/>
                                                         مرد
                                                     </label>
                                                 </div>
