--- a/static/apply-step2.html
+++ b/static/apply-step2.html
@@ -42,13 +42,14 @@
                             </li>
                         </ul>
                     </div>
-                    <form>
+                    <form data-valid-form>
                         <div class="form_group_style1">
                             <div class="fg1_inner">
                                 <div class="form_style1">
                                     <ul data-uk-grid>
                                         <li class="fs1_item uk-width-1-1" data-wrapper-member>
-                                            <div class="uk-grid uk-child-width-1-2 uk-position-relative" data-item-member>
+                                            <div class="uk-grid uk-child-width-1-2 uk-position-relative"
+                                                 data-item-member>
                                                 <div>
                                                     <label class="fs1_label" for="t0">نام و نام خانوادگی</label>
                                                     <input type="text" id="t0" autocomplete="off"/>
@@ -57,51 +58,58 @@
                                                     <label class="fs1_label " for="t7">سمت در تیم</label>
                                                     <input type="text" id="t7" autocomplete="off"/>
                                                 </div>
-                                                <a class="uk-button uk-button-text fs1_action add" data-action-member='add'>افزودن</a>
+                                                <a class="uk-button uk-button-text fs1_action add"
+                                                   data-action-member='add'>افزودن</a>
                                             </div>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
                                             <div data-uk-grid class="uk-child-width-1-1">
-                                                <div>
-                                                    <label class="fs1_label req" for="t11">
+                                                <div class="uk-position-relative">
+                                                    <label class="fs1_label" for="background">
                                                         سابقه فعالیت تیمی به غیر از استارتاپ فعلی ومدت زمان شناخت موسس
                                                         از
                                                         تیم ؟
                                                     </label>
-                                                    <textarea id="t11" data-autosize></textarea>
+                                                    <textarea name="background" id="background" data-autosize
+                                                              data-valid-required></textarea>
                                                 </div>
-                                                <div>
-                                                    <label class="fs1_label req" for="t12">تعداد افراد شاغل در استارتاپ</label>
-                                                    <input type="text" id="t12" autocomplete="off"/>
+                                                <div class="uk-position-relative">
+                                                    <label class="fs1_label" for="employees_count">تعداد افراد شاغل در
+                                                        استارتاپ</label>
+                                                    <input name="employees_count" type="text" id="employees_count"
+                                                           autocomplete="off" data-valid-required/>
                                                 </div>
-                                                <div>
-                                                    <label class="fs1_label req" for="t13">
+                                                <div class="uk-position-relative">
+                                                    <label class="fs1_label" for="introduction">
                                                         نقش و شرح فعالیت هریك از اعضای تیم چیست و دلیل صلاحیت این فرد
                                                         برای
                                                         نقش خود را توضیح دهید ؟
                                                     </label>
-                                                    <textarea id="t13" data-autosize></textarea>
+                                                    <textarea name="introduction" id="introduction" data-autosize
+                                                              data-valid-required></textarea>
                                                 </div>
                                             </div>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
-                                            <label class="fs1_label req" for="t14">
-                                                نحوه فعالیت اعضای تیم شما چطونه است ؟
+                                            <label class="fs1_label" for="teamwork">
+                                                نحوه فعالیت اعضای تیم شما چگونه است ؟
                                                 <small style="font-size: 75%">( تمام وقت / پاره وقت / از راه دور و...
                                                     نام
                                                     هریک از اعضا - نوع فعالیت - توضیح كوتاهی از دلیل آن)
                                                 </small>
                                             </label>
-                                            <textarea id="t14" data-autosize></textarea>
+                                            <textarea name="teamwork" id="teamwork" data-autosize
+                                                      data-valid-required></textarea>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
-                                            <label class="fs1_label req" for="t15">
+                                            <label class="fs1_label" for="description">
                                                 تیم خود را چگونه توصیف میکنید؟
                                                 <small>
                                                     (ویژگی بارز و یا تفاوت عمده شما با تیم هاي دیگر)
                                                 </small>
                                             </label>
-                                            <textarea id="t15" data-autosize></textarea>
+                                            <textarea name="description" id="description" data-autosize
+                                                      data-valid-required></textarea>
                                         </li>
                                     </ul>
                                 </div>
@@ -109,7 +117,7 @@
                         </div>
                         <div class="uk-margin-medium uk-margin-remove-bottom uk-flex uk-flex-between">
                             <a href="apply.html" class="btn_style1 bg_gray">بازگشت</a>
-                            <a href="apply-step3.html" class="btn_style1 bg_purple">تائید و ادامه</a>
+                            <button type="submit" class="btn_style1 bg_purple">تائید و ادامه</button>
                         </div>
                     </form>
                 </div>
@@ -122,6 +130,9 @@
 <script src="_js/jquery-3.3.1.min.js"></script>
 <script src="_framework/uikit-3.0.0/js/uikit.min.js"></script>
 <script src="_js/pages/apply.js"></script>
+<script src="_plugin/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="_plugin/jquery-validation/dist/additional-methods.min.js"></script>
+<script src="_plugin/jquery-validation/validate.js"></script>
 
 </body>
 </html>
