--- a/static/apply.html
+++ b/static/apply.html
@@ -122,7 +122,8 @@
                                                                type="radio"
                                                                name="gender"
                                                                checked
-                                                               data-target-input="#soldiership_holder" data-action-input="hidden"/>
+                                                               data-target-input="#soldiership_holder"
+                                                               data-action-input="hidden"/>
                                                         زن
                                                     </label>
                                                 </div>
