--- a/static/apply-step3.html
+++ b/static/apply-step3.html
@@ -732,6 +732,7 @@
                                                         <input class="uk-radio" type="radio"
                                                                name="is_mvp_ready"
                                                                value="0"
+                                                               checked
                                                                data-target-input="#mvp_address"
                                                                data-action-input="hidden"/>
                                                         خیر
@@ -741,6 +742,7 @@
                                             <input type="text"
                                                    placeholder="لینک آن را وارد نمایید "
                                                    id="mvp_address"
+                                                   nan
                                                    autocomplete="off" style="display: none"/>
                                         </li>
                                         <!--<li class="fs1_item uk-width-1-1">
@@ -792,6 +794,7 @@
                                                                type="radio"
                                                                name="is_idea_submitted"
                                                                value="0"
+                                                               checked
                                                                data-target-input="#s10"
                                                                data-action-input="hidden"/>
                                                         خیر
@@ -815,7 +818,7 @@
                                             <!--<textarea id="s10" data-autosize></textarea>-->
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
-                                            <label class="fs1_label" for="market_research">
+                                            <label class="fs1_label opt" for="market_research">
                                                 آیا تا کنون با مشتریان احتمالی خود صحبت کرده اید یا هیچ گونه مطالعات
                                                 بازاری انجام داده اید؟
                                             </label>
@@ -823,7 +826,7 @@
                                                       data-autosize></textarea>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
-                                            <label class="fs1_label" for="description">
+                                            <label class="fs1_label opt" for="description">
                                                 اگر توضیح بیشتری وجود دارد که لازم است ما بدانیم در زیر بنویسید.
                                             </label>
                                             <textarea name="description" id="description" data-autosize></textarea>
