complete validate js

--- a/static/apply.html
+++ b/static/apply.html
@@ -100,7 +100,7 @@
                                                    data-valid-regex="09[0|1|2|3|9]([ ]|,|-|[()]){0,2}(?:[0-9]([ ]|,|-|[()]){0,2}){8}"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="gender">
+                                            <label class="fs1_label">
                                                 جنسیت
                                             </label>
                                             <div class="uk-display-inline-block uk-margin-small-right">
